searchbox: make the transition between updates smoother.

--- a/karl/ux2/microtemplates/searchbox.mustache
+++ b/karl/ux2/microtemplates/searchbox.mustache
@@ -32,7 +32,7 @@
     </div>
     {{/error}}
     {{#results}}
-    <div class="pushdownContent clearfix row sb-results">
+    <div class="pushdownContent clearfix row sb-results {{#progress}}sb-disabled{{/progress}}">
         {{#columns}}
         <div class="span4">
             {{#groups}}
