--- a/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
+++ b/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
@@ -12,6 +12,18 @@
         width: 960px;
     }
 
+    //
+    // Visual cues
+    //
+
+    .sb-disabled {
+        opacity: 0.5;
+    }
+    
+    //
+    // Panels and contents
+    //
+
     .sb-uxpanel {
         .sb-close {
             font-weight: bold;
