searchbox: smoother animations. One lesson is that the pushdown panel should not have an outer margin, because our animation cannot handle this case atm

--- a/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
+++ b/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
@@ -3,7 +3,10 @@
 
 .searchbox-pushdown-panel {
     @sb-spacing: 10px;
-    margin: @sb-spacing 0  @sb-spacing 0;
+    
+    // Must have zero margin, or the animations will break.
+    margin: 0;
+    padding: @sb-spacing 0  @sb-spacing 0;
 
     // for some reason, this is 10px shorter then needed,
     // to play nice with the bootstrap grid system.
