searchbox: some styling in the uxpanel

--- a/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
+++ b/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
@@ -34,6 +34,9 @@
             float: right;
             cursor: pointer;
         }
+        .checkbox { // and the select too...
+            margin: 0 @sb-spacing/2 0 @sb-spacing/2;
+        }
     }
 
     .sb-group-header {
