--- a/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
+++ b/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
@@ -67,7 +67,9 @@
     }
 
     .sb-error {
-        margin: @sb-spacing 0 0 0;
+        margin-top: @sb-spacing;
+        text-align: center;
+        font-weight: bold;
     }
 
     // TODO
