--- a/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
+++ b/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
@@ -63,6 +63,13 @@
             .sb-item-1 {
                 font-weight: bold;
             }
+
+            .sb-icon {
+                float: left;
+                // ... perhaps would be nicer to vertically middle it...
+                margin: 7px @sb-spacing 7px 0;
+            }
+
         }
     }
 
@@ -77,7 +84,6 @@
     .sb-forum-item,
     .sb-forumtopic-item,
     .sb-comment-item,
-    .sb-file-item,
     .sb-office-item,
     {
         color: grey;
