--- a/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
+++ b/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
@@ -67,6 +67,7 @@
             .sb-icon {
                 float: left;
                 // ... perhaps would be nicer to vertically middle it...
+                max-height: 30px;
                 margin: 7px @sb-spacing 7px 0;
             }
 
