Do the positioning of the icin correctly.

--- a/karl/ux2/microtemplates/searchbox.mustache
+++ b/karl/ux2/microtemplates/searchbox.mustache
@@ -48,7 +48,7 @@
                 {{#profile}}   {{! TODO }}
                 <a class="sb-item sb-profile-item" href="{{url}}">
                     <img class="sb-icon" src="{{thumbnail}}">
-                    <span>
+                    <span class="sb-labels">
                         <span class="sb-item-1">TODO {{title}}</span>
                         <span class="sb-item-2">by {{modified_by}}, {{modified_ago}}</span>
                     </span>
@@ -93,7 +93,7 @@
                 {{#file}}
                 <a class="sb-item sb-file-item" href="{{url}}">
                     <img class="sb-icon" src="{{icon}}">
-                    <span>
+                    <span class="sb-labels">
                         <span class="sb-item-1">TODO {{title}}</span>
                         <span class="sb-item-2">by {{modified_by}}, {{modified_ago}} in {{community}}</span>
                     </span>
