--- a/karl/ux2/microtemplates/searchbox.mustache
+++ b/karl/ux2/microtemplates/searchbox.mustache
@@ -39,7 +39,7 @@
                 <div class="sb-group-header">
                     <span>{{label}}</span>
                     <span class="pull-right">
-                        <a href="#">show more</a>
+                        <!--a href="#">show more</a-->
                         <a href="#">full search</a>
                     </span>
                 </div>
