searchbox: make a better close icon (...)

--- a/karl/ux2/microtemplates/searchbox.mustache
+++ b/karl/ux2/microtemplates/searchbox.mustache
@@ -23,7 +23,10 @@
             </label>
             -->
         </span>
-        <a class="sb-close">CLOSE</a>
+        <span class="sb-close">
+            CLOSE
+            <a href="#" class="close">&times;</a>
+        </span>
     </div>
     {{#error}}
     <div class="pushdownContent clearfix sb-error">
