--- a/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
+++ b/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
@@ -65,10 +65,17 @@
 
     .sb-uxpanel {
         .sb-close {
-            font-weight: bold;
-            color: red;
             float: right;
+            margin-left: 4px;
+            line-height: 30px;
             cursor: pointer;
+            & a {
+                color: @linkColor;
+                opacity: 0.75;
+                &:hover {
+                    opacity: 1;
+                }
+            }
         }
         .checkbox { // and the select too...
             margin: 0 @sb-spacing/2 0 @sb-spacing/2;
