Progress on the Full Search links. The group is now taken to consideration, the scope not yet. In addition: trimming and lowering the search string.

--- a/karl/ux2/microtemplates/searchbox.mustache
+++ b/karl/ux2/microtemplates/searchbox.mustache
@@ -42,8 +42,8 @@
                 <div class="sb-group-header">
                     <span>{{label}}</span>
                     <span class="pull-right">
-                        <!--a href="#">show more</a-->
-                        <a href="#">full search</a>
+                        <!--a href="{ {urlShowMore } }">show more</a-->
+                        <a href="{{urlFullSearch}}">full search</a>
                     </span>
                 </div>
                 {{#items}}
