searchbox: make the close link to a close button

--- a/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
+++ b/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
@@ -67,15 +67,15 @@
         .sb-close {
             float: right;
             margin-left: 4px;
-            line-height: 30px;
-            cursor: pointer;
-            & a {
-                color: @linkColor;
-                opacity: 0.75;
-                &:hover {
-                    opacity: 1;
-                }
-            }
+            //line-height: 30px;
+            //cursor: pointer;
+            //& a {
+            //    color: @linkColor;
+            //    opacity: 0.75;
+            //    &:hover {
+            //        opacity: 1;
+            //    }
+            //}
         }
         .checkbox { // and the select too...
             margin: 0 @sb-spacing/2 0 @sb-spacing/2;
