--- a/karl/ux2/microtemplates/searchbox.mustache
+++ b/karl/ux2/microtemplates/searchbox.mustache
@@ -23,10 +23,7 @@
             </label>
             -->
         </span>
-        <span class="sb-close">
-            CLOSE
-            <a href="#" class="close">&times;</a>
-        </span>
+        <a class="btn sb-close"><i class="icon-close">&times</i> Close</a>
     </div>
     {{#error}}
     <div class="pushdownContent clearfix sb-error">
