searchbox: implement the profile result type

--- a/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
+++ b/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
@@ -67,15 +67,6 @@
         .sb-close {
             float: right;
             margin-left: 4px;
-            //line-height: 30px;
-            //cursor: pointer;
-            //& a {
-            //    color: @linkColor;
-            //    opacity: 0.75;
-            //    &:hover {
-            //        opacity: 1;
-            //    }
-            //}
         }
         .checkbox { // and the select too...
             margin: 0 @sb-spacing/2 0 @sb-spacing/2;
@@ -120,6 +111,10 @@
                 margin: 0 0 0 3*@sb-spacing;
             }
 
+            .email {
+               color: @linkColor;
+            }
+
         }
     }
 
@@ -130,7 +125,6 @@
     }
 
     // TODO
-    .sb-profile-item,
     .sb-forum-item,
     .sb-forumtopic-item,
     .sb-comment-item,
