--- a/karl/ux2/microtemplates/searchbox.mustache
+++ b/karl/ux2/microtemplates/searchbox.mustache
@@ -44,12 +44,12 @@
                     </span>
                 </div>
                 {{#items}}
-                {{#profile}}   {{! TODO }}
+                {{#profile}}
                 <a class="sb-item sb-profile-item" href="{{url}}">
                     <img class="sb-icon" src="{{thumbnail}}">
                     <span class="sb-labels">
-                        <span class="sb-item-1">TODO {{title}}</span>
-                        <span class="sb-item-2">by {{modified_by}}, {{modified_ago}}</span>
+                        <span class="sb-item-1">{{title}}{{#department}} - {{department}}{{/department}}</span>
+                        <span class="sb-item-2">{{#extension}}x{{extension}} {{/extension}}{{#email}}<span data-href="mailto:{{email}}" class="email">{{email}}</span>{{/email}}</span>
                     </span>
                 </a>
                 {{/profile}}
