--- a/karl/ux2/microtemplates/searchbox.mustache
+++ b/karl/ux2/microtemplates/searchbox.mustache
@@ -85,7 +85,7 @@
                     <img class="sb-icon" src="{{thumbnail}}">
                     <span class="sb-labels">
                         <span class="sb-item-1">{{title}}</span>
-                        <span class="sb-item-2">by {{modified_by}}, {{modified_ago}}</span>
+                        <span class="sb-item-2">by {{creator}}, {{created_ago}}</span>
                     </span>
                 </a>
                 {{/forum}}
@@ -138,7 +138,7 @@
                 <a class="sb-item sb-office-item" href="{{url}}">
                     <img class="sb-icon" src="{{thumbnail}}">
                     <span class="sb-labels">
-                        <span class="sb-item-1">{{title}}{{#telephone}} <span class="discreet">{{telephone}}</span>{{/telephone}}</span>
+                        <span class="sb-item-1">{{title}} Office{{#telephone}} <span class="discreet">{{telephone}}</span>{{/telephone}}</span>
                         <span class="sb-item-2">{{addressline}}</span>
                     </span>
                 </a>
