searchbox: in the result group, display all the groups, including empty ones. (Previously just the columns had a header text saying no results found. This way seems to be more consistent with the users' expectations.

--- a/karl/ux2/microtemplates/searchbox.mustache
+++ b/karl/ux2/microtemplates/searchbox.mustache
@@ -144,13 +144,14 @@
                 </a>
                 {{/office}}
                 {{/items}}
+                {{^items}}
+                <div class="sb-notfound">
+                    No results found.
+                </div>
+                {{/items}}
             </div>
             {{/groups}}
-            {{^groups}}
-            <div class="sb-group-header sb-notfound">
-                No results found.
-            </div>
-            {{/groups}}
+           
         </div>
         {{/columns}}
     </div>
