#1207089, add some padding to the left of the location on Calendar List view.

--- a/karl/views/static/calendar.css
+++ b/karl/views/static/calendar.css
@@ -830,9 +830,10 @@ body .cal_hour_event .cal_event_block .time {
   font-size: 90%;
 }
 .cal_agenda_loc {
-  margin: 3px 0 0 0;
+  margin: 3px 0 0 8px;
   color: #666;
   font-size: 95%;
+  display: inline-block;
 }
 
 .cal_agenda .pipe {
