Checkpoint on the way to sorting.

--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -2749,3 +2749,12 @@ body .ui-state-default .karl-icon-loading {
 #notesportlet .portlet-item {
     margin-bottom: 0.5em;
 }
+
+.notehandle {
+    display:inline-block;
+    vertical-align: middle;
+}
+
+.notehandle:hover {
+    cursor: move;
+}
