--- a/karl/views/static/karl-ui.css
+++ b/karl/views/static/karl-ui.css
@@ -4,8 +4,28 @@
 *
 */
 
-/* jquery-ui */
-@import url("min/jquery-ui-1.9m3.karl.smoothness.css");
+/* jquery-ui: */
+
+/* base jquery-ui styles */
+@import url("dist/jquery-ui/themes/base/jquery.ui.core.css");
+/*@ import url("dist/jquery-ui/themes/base/jquery.ui.accordion.css");*/
+@import url("dist/jquery-ui/themes/base/jquery.ui.autocomplete.css");
+@import url("dist/jquery-ui/themes/base/jquery.ui.button.css");
+@import url("dist/jquery-ui/themes/base/jquery.ui.datepicker.css");
+@import url("dist/jquery-ui/themes/base/jquery.ui.dialog.css");
+@import url("dist/jquery-ui/themes/base/jquery.ui.menu.css");
+@import url("dist/jquery-ui/themes/base/jquery.ui.progressbar.css");
+/*@ import url("dist/jquery-ui/themes/base/jquery.ui.resizable.css");*/
+/*@ import url("dist/jquery-ui/themes/base/jquery.ui.selectable.css");*/
+@import url("dist/jquery-ui/themes/base/jquery.ui.slider.css");
+/*@ import url("dist/jquery-ui/themes/base/jquery.ui.spinner.css");*/
+@import url("dist/jquery-ui/themes/base/jquery.ui.tabs.css");
+/*@ import url("dist/jquery-ui/themes/base/jquery.ui.tooltip.css");*/
+
+/* our actual theme, is "smoothness" based, and contains a "karl" skin */
+@import url("jquery-ui-themes/smoothness/jquery.ui.theme.css");
+
+/* autobox depends on jquery-ui */
 @import url("jquery-ui/autobox2/jquery.ui.autobox.css");
 
 /* KARL plugins */
