Remove images from fixture as we don't need them, so let's avoid the need to fixture them too

--- a/karl/views/static/karl-plugins/karl-contentfeeds/karl-contentfeeds-fixture.html
+++ b/karl/views/static/karl-plugins/karl-contentfeeds/karl-contentfeeds-fixture.html
@@ -4,22 +4,22 @@
   <div class="feedOptions">
 
        <div id="feed-polling">
-           Auto Update <img id="polling-info" src="../../static/images/livesearch_info.png" alt="Click for Polling Info" /><br />
+           Auto Update <img id="polling-info" alt="Click for Polling Info" /><br />
            <!-- only the class on #poll-indicator needs to change to change display. Options: on, off, polling, error -->
            <a href="#" id="poll-indicator" class="on"><span>
-               <img class="img-on" src="../../static/images/feed-on.gif" alt="Polling is On" />
-               <img class="img-off" src="../../static/images/feed-off.gif" alt="Polling is Off" />
-               <img class="img-polling" src="../../static/images/feed-polling.gif" alt="Polling for New Content" />
-               <img class="img-error" src="../../static/images/message_notice_icon.gif" alt="Polling Error. Click for Info" />
+               <img class="img-on" alt="Polling is On" />
+               <img class="img-off" alt="Polling is Off" />
+               <img class="img-polling" alt="Polling for New Content" />
+               <img class="img-error" alt="Polling Error. Click for Info" />
            </span></a>
            <div class="polling-details info">
                <a href="#" class="close">close</a>
                <p>Updating is done every 30 seconds. Click the button to turn updating on or off</p>
                <ul>
-                   <li><img src="../../static/images/feed-on.gif" alt="Polling is On" /> Auto Update is On</li>
-                   <li><img src="../../static/images/feed-off.gif" alt="Polling is Off" /> Auto Update is Off</li>
-                   <li><img src="../../static/images/feed-polling.gif" alt="Polling for New Content" /> Auto Update for New Content</li>
-                   <li><img src="../../static/images/message_notice_icon.gif" alt="Polling Error. Click for Info" /> Auto Update Error. Click the button for info</li>
+                   <li><img alt="Polling is On" /> Auto Update is On</li>
+                   <li><img alt="Polling is Off" /> Auto Update is Off</li>
+                   <li><img alt="Polling for New Content" /> Auto Update for New Content</li>
+                   <li><img alt="Polling Error. Click for Info" /> Auto Update Error. Click the button for info</li>
                </ul>
            </div>
            <div class="polling-details errormessage">
@@ -33,22 +33,22 @@
 
   <div class="feedOptions">
        <div id="feed-polling2">
-           Auto Update <img class="MARK1" src="../../static/images/livesearch_info.png" alt="Click for Polling Info" /><br />
+           Auto Update <img class="MARK1" alt="Click for Polling Info" /><br />
            <!-- only the class on #poll-indicator needs to change to change display. Options: on, off, polling, error -->
            <a href="#" class="MARK6 on"><span>
-               <img class="img-on" src="../../static/images/feed-on.gif" alt="Polling is On" />
-               <img class="img-off" src="../../static/images/feed-off.gif" alt="Polling is Off" />
-               <img class="img-polling" src="../../static/images/feed-polling.gif" alt="Polling for New Content" />
-               <img class="img-error" src="../../static/images/message_notice_icon.gif" alt="Polling Error. Click for Info" />
+               <img class="img-on" alt="Polling is On" />
+               <img class="img-off" alt="Polling is Off" />
+               <img class="img-polling" alt="Polling for New Content" />
+               <img class="img-error" alt="Polling Error. Click for Info" />
            </span></a>
            <div class="MARK2">
                <a href="#" class="MARK5">close</a>
                <p>Updating is done every 30 seconds. Click the button to turn updating on or off</p>
                <ul>
-                   <li><img src="../../static/images/feed-on.gif" alt="Polling is On" /> Auto Update is On</li>
-                   <li><img src="../../static/images/feed-off.gif" alt="Polling is Off" /> Auto Update is Off</li>
-                   <li><img src="../../static/images/feed-polling.gif" alt="Polling for New Content" /> Auto Update for New Content</li>
-                   <li><img src="../../static/images/message_notice_icon.gif" alt="Polling Error. Click for Info" /> Auto Update Error. Click the button for info</li>
+                   <li><img alt="Polling is On" /> Auto Update is On</li>
+                   <li><img alt="Polling is Off" /> Auto Update is Off</li>
+                   <li><img alt="Polling for New Content" /> Auto Update for New Content</li>
+                   <li><img alt="Polling Error. Click for Info" /> Auto Update Error. Click the button for info</li>
                </ul>
            </div>
            <div class="MARK3">
