--- a/karl/views/static/karl-plugins/karl-contentfeeds/karl-contentfeeds-templates-fixture.html
+++ b/karl/views/static/karl-plugins/karl-contentfeeds/karl-contentfeeds-templates-fixture.html
@@ -2,7 +2,7 @@
 <script type="text/tmpl" id="item_row">
 <div class="feeditem">
   <div class="thumbnail">
-      <img src="{%= item.thumbnail %}" />
+      <img alt="{%= item.thumbnail %}" />
   </div>
 
   <div class="feedoperation">
