--- a/karl/views/static/karl-plugins/karl-captionedimage/karl-captionedimage-fixture.html
+++ b/karl/views/static/karl-plugins/karl-captionedimage/karl-captionedimage-fixture.html
@@ -15,7 +15,7 @@
     <img class="image" style="float: left"
       alt="Image One"
       width="200px" height="150px"
-      src="images/bicking2.png">
+      src="data:image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/fNwfjZ0frl3/zy7////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAkAABAALAAAAAAQABAAAAVVICSOZGlCQAosJ6mu7fiyZeKqNKToQGDsM8hBADgUXoGAiqhSvp5QAnQKGIgUhwFUYLCVDFCrKUE1lBavAViFIDlTImbKC5Gm2hB0SlBCBMQiB0UjIQA7"
 
     Suspendisse sodales consectetur elementum. Phasellus a nibh nunc.
     Vestibulum eget sem at felis varius molestie. Duis rutrum porta aliquam.
@@ -45,7 +45,7 @@
     <img class="image" style="display: inline-block;"
       alt="Image Two"
       width="200px" height="150px"
-      src="images/bicking2.png">
+      src="data:image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/fNwfjZ0frl3/zy7////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAkAABAALAAAAAAQABAAAAVVICSOZGlCQAosJ6mu7fiyZeKqNKToQGDsM8hBADgUXoGAiqhSvp5QAnQKGIgUhwFUYLCVDFCrKUE1lBavAViFIDlTImbKC5Gm2hB0SlBCBMQiB0UjIQA7"
 
     Pellentesque in sagittis ante. Ut porttitor
     sollicitudin fringilla. Proin sed eros tortor, nec luctus risus! Curabitur
@@ -68,7 +68,7 @@
     <img class="image" style="float: right;"
       alt="Image Three"
       width="200px" height="150px"
-      src="images/bicking2.png">
+      src="data:image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/fNwfjZ0frl3/zy7////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAkAABAALAAAAAAQABAAAAVVICSOZGlCQAosJ6mu7fiyZeKqNKToQGDsM8hBADgUXoGAiqhSvp5QAnQKGIgUhwFUYLCVDFCrKUE1lBavAViFIDlTImbKC5Gm2hB0SlBCBMQiB0UjIQA7"
 
     Cras congue tincidunt elit, at ullamcorper nulla sagittis id. Aenean
     consequat quam nec ante rhoncus hendrerit. Fusce egestas hendrerit eleifend.
@@ -99,7 +99,7 @@
     <img class="image" style="display: block; margin-left: auto; margin-right: auto;"
       alt="Image Four"
       width="200px" height="150px"
-      src="images/bicking2.png">
+      src="data:image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/fNwfjZ0frl3/zy7////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAkAABAALAAAAAAQABAAAAVVICSOZGlCQAosJ6mu7fiyZeKqNKToQGDsM8hBADgUXoGAiqhSvp5QAnQKGIgUhwFUYLCVDFCrKUE1lBavAViFIDlTImbKC5Gm2hB0SlBCBMQiB0UjIQA7"
   </p>
 
   <p>
@@ -114,7 +114,7 @@
     <img class="image" style="display: block; margin-left: auto; margin-right: auto;"
       alt="Image Five"
       width="200px" height="150px"
-      src="images/bicking2.png">
+      src="data:image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/fNwfjZ0frl3/zy7////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAkAABAALAAAAAAQABAAAAVVICSOZGlCQAosJ6mu7fiyZeKqNKToQGDsM8hBADgUXoGAiqhSvp5QAnQKGIgUhwFUYLCVDFCrKUE1lBavAViFIDlTImbKC5Gm2hB0SlBCBMQiB0UjIQA7"
 
     Suspendisse sodales consectetur elementum. Phasellus a nibh nunc.
     Vestibulum eget sem at felis varius molestie. Duis rutrum porta aliquam.
@@ -138,7 +138,7 @@
     <img class="image" style="display: block; margin-left: auto; margin-right: auto;"
       alt="Image Five"
       width="200px" height="150px"
-      src="images/bicking2.png">
+      src="data:image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/fNwfjZ0frl3/zy7////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAkAABAALAAAAAAQABAAAAVVICSOZGlCQAosJ6mu7fiyZeKqNKToQGDsM8hBADgUXoGAiqhSvp5QAnQKGIgUhwFUYLCVDFCrKUE1lBavAViFIDlTImbKC5Gm2hB0SlBCBMQiB0UjIQA7"
 
     Suspendisse sodales consectetur elementum. Phasellus a nibh nunc.
     Vestibulum eget sem at felis varius molestie. Duis rutrum porta aliquam.
@@ -154,7 +154,7 @@
     <img class="image"
       alt="Image Seven"
       width="200px" height="150px"
-      src="images/bicking2.png">
+      src="data:image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/fNwfjZ0frl3/zy7////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAkAABAALAAAAAAQABAAAAVVICSOZGlCQAosJ6mu7fiyZeKqNKToQGDsM8hBADgUXoGAiqhSvp5QAnQKGIgUhwFUYLCVDFCrKUE1lBavAViFIDlTImbKC5Gm2hB0SlBCBMQiB0UjIQA7"
   </p>
 
 </div>
