--- a/karl/views/static/bottlecap-livesearch/livesearch.css
+++ b/karl/views/static/bottlecap-livesearch/livesearch.css
@@ -33,6 +33,16 @@
     text-align: left;
 }
 
+
+/*
+
+A fix for https://bugs.launchpad.net/karl4/+bug/1494823
+jQuery UI menu on IE10/IE11 shows bullets
+*/
+.bc-livesearch-menu .ui-menu-item {
+    list-style-image: url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7);
+}
+
 .bc-livesearch-autocomplete-first {
     border: none;
 }
